--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flappy Bird</title>
-    <style>
-        canvas{
-            border: 1px solid black;
-            display: block;
-            margin: 0px auto;
-        }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <canvas id="mycanvas" width="320" height="480"></canvas>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
